# fmap

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  publish.yml  pull_request.yml  release.yml
src/: cli.rs  commands.rs  config.rs  display.rs  install.rs  main.rs  scan.rs  utils.rs
src/system/: config.rs  local.rs  mod.rs
